# my-tcp-sockets

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  maybe_tls.rs  no_tls.rs  socket_address.rs  socket_event_callback.rs  tcp_contract.rs  tcp_serializer_metadata.rs  tcp_socket_serializer.rs  tcp_sockets_settings.rs  tcp_write_buffer.rs  threads_statistics.rs  types.rs  with_tls_or_unix_socket.rs
src/socket_reader/: error.rs  mod.rs  my_read_buffer.rs  read_buffer.rs  socket_reader.rs  socket_reader_in_mem.rs  socket_reader_mock.rs  tcp_socket_reader.rs
src/tcp_client/: connect_to_tcp_socket.rs  connect_to_unix_socket.rs  connection_loop.rs  dead_connection_detector.rs  handle_new_connection.rs  mod.rs  tcp_client.rs  tcp_connection_holder.rs  tls.rs
src/tcp_connection/: buffer_to_send_wrapper.rs  connection.rs  connection_callback.rs  connection_inner.rs  connection_name.rs  connection_statistics.rs  connection_stream.rs  flush_to_socket_event_loop.rs  mod.rs  new_connection.rs  one_second_metric.rs  ping_loop.rs  read_loop.rs  socket_data.rs  tcp_connection.rs  tcp_connection_abstraction.rs  tcp_connection_inner.rs  tcp_connection_states.rs  tcp_connection_stream.rs  tcp_payloads.rs
src/tcp_server/: accept_tcp_connections_loop.rs  connections_list.rs  dead_connection_detector.rs  handle_new_connection.rs  mod.rs  read.rs  tcp_server.rs  threads_statistics.rs
src/unix_socket/: accept_unix_socket_connections_loop.rs  mod.rs  unix_socket_server.rs
src/unix_socket_server/: accept_unix_socket_connections_loop.rs  handle_new_connection.rs  unix_socket_server.rs
(+4 files in other folders)
