[package]
name = "my-tcp-sockets"
version = "0.1.7"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
debug_incoming_traffic = []
debug_outcoming_traffic = []
statefull_serializer = []
serialize_as_ref = []


[dependencies]
rust-extensions = { tag = "0.1.3", git = "https://github.com/MyJetTools/rust-extensions.git" }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
