[package]
name = "my-tcp-sockets"
version = "0.1.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
serialize_as_ref = []


[dependencies]
rust-extensions = { tag = "0.1.4", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
