[package]
name = "my-tcp-sockets"
version = "0.1.10"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
default = []
with-tls = ["my-tls"]


[dependencies]
rust-extensions = { tag = "0.1.5", git = "https://github.com/MyJetTools/rust-extensions.git", features = [
    "with-tokio",
] }

my-tls = { tag = "0.1.5", git = "https://github.com/MyJetTools/my-tls.git", optional = true }

tokio = { version = "*", features = ["full"] }
tokio-util = "*"
async-trait = "*"
